# SimpleSysIO

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
include/: CMakeLists.txt
include/SimpleSysIO/: BinaryIOStreamBase.hpp  CMakeLists.txt  Config.hpp  Endianness.hpp  Exceptions.hpp  IOStreamBase.hpp  StreamAcceptorBase.hpp  StreamSocketBase.hpp
include/SimpleSysIO/Internal/: SimpleObjects.hpp
include/SimpleSysIO/SysCall/: Files.hpp  TCPAcceptor.hpp  TCPSocket.hpp
test/: CMakeLists.txt
test/src/: Main.cpp  TestDiskFiles.cpp  TestTCPConnection.cpp
